API key visibility vulnerability fixed

--- a/src/components/Titlebar/index.scss
+++ b/src/components/Titlebar/index.scss
@@ -7,7 +7,6 @@
     top: 0;
     left: 0;    
     position: absolute;
-    z-index: 3;
     display: flex;
     flex-direction: row;
 
@@ -21,20 +20,11 @@
         margin-top: 0.65rem;
         margin-left: 2rem;
         font-size: 20px;
+        height: 100px;
         img{
             transform: scale(20%, 20%);
             transform-origin: left top;
         }
-    }
-
-    .icon{
-        width: 5rem; 
-        margin-left: 47%;
-        margin-right: 1rem;
-        margin-top: 13px;
-        background-image: url("../../assets/images/weathericon.png");
-        background-size: 75px;
-        background-repeat: no-repeat;            
     }
 }
 
@@ -51,12 +41,6 @@
             img{
                 transform: scale(15%, 15%);
             }
-        }
-
-        .icon{
-            margin-left: 32%;
-            margin-top: 10px;
-            background-size: 58px;
         }
     }
 }
